tests/NormalTests/paczka1/small_fuzzy/32842224.err
Error in line 1: xvTeLm1 A106 26,0
Error in line 3: yQWf S632 59,9
